# horion-cpvp

./: .gitignore  CMakeLists.txt  CppProperties.json  Horion.sln  Horion.vcxproj  Horion.vcxproj.filters  LICENSE  PCH.h  README.md  Resource.rc  resource.h
Horion/: DrawUtils.cpp  DrawUtils.h  Loader.cpp  Loader.h
Horion/Command/: CommandMgr.cpp  CommandMgr.h
Horion/Config/: ConfigManager.cpp  ConfigManager.h
Horion/FriendList/: FriendList.h
Horion/Menu/: ClickGui.cpp  ClickGui.h  NotifMgr.cpp  NotifMgr.h  TabGui.cpp  TabGui.h
Horion/Module/: ModuleManager.cpp  ModuleManager.h
Horion/path/: JoeConstants.cpp  JoeMovementController.cpp  (+7 more)
Memory/: GameData.cpp  GameData.h  Hooks.cpp  Hooks.h
SDK/: Abilities.h  ActorFlags.h  Attribute.h  BinaryStream.cpp  BinaryStream.h  Biome.cpp  Biome.h  Block.h  BlockActor.h  BlockLegacy.cpp  BlockLegacy.h  BlockSource.cpp  BlockSource.h  BuildPlatform.h  Camera.cpp  Camera.h  ChestBlockActor.cpp  ChestBlockActor.h  ClientInputCallbacks.cpp  ClientInputCallbacks.h  ClientInstance.cpp  ClientInstance.h  ComplexInventoryTransaction.cpp  ComplexInventoryTransaction.h  ConnectionRequest.cpp  ConnectionRequest.h  Entity.cpp  Entity.h  EntityList.h  GameMode.cpp  GameMode.h  GameSettingsInput.h  GuiData.cpp  GuiData.h  HashedString.h  Inventory.cpp  Inventory.h  InventoryTransaction.cpp  InventoryTransaction.h  Item.cpp  (+33 more)
Utils/: HMath.h  Logger.cpp  Logger.h  MoveUtils.cpp  MoveUtils.h  Target.cpp  Target.h  TextFormat.h  TimerUtils.cpp  TimerUtils.h  Utils.cpp  Utils.h  gifdec.cpp  gifdec.h  svpng.h  uuid_v4.h  xorstr.hpp
(+341 files in other folders)
